--- a/src/client/Tag.scss
+++ b/src/client/Tag.scss
@@ -45,6 +45,8 @@ $yaml-orange: rgba(239, 145, 62, 0.6);
 $aws-orange: rgba(244, 154, 62, 0.6);
 $ec2-orange: rgba(242, 133, 59, 0.6);
 $awslambda-orange: rgba(241, 124, 58, 0.6);
+$d3-orange: rgba(231, 147, 86, 0.6);
+$svg-orange: rgba(238, 174, 90, 0.6);
 $jenkins-lightskin: rgba(240, 214, 183, 0.6);
 $express-gray: rgba(224, 226, 228, 0.6);
 $json-gray: rgba(121, 119, 119, 0.6);
@@ -178,6 +180,14 @@ $default: rgba(204, 204, 204, 0.6);
 
 .jarombek-tag-color-awslambda {
   background-color: lighten($awslambda-orange, 10%);
+}
+
+.jarombek-tag-color-d3 {
+  background-color: lighten($d3-orange, 10%);
+}
+
+.jarombek-tag-color-svg {
+  background-color: lighten($svg-orange, 10%);
 }
 
 .jarombek-tag-color-jenkins {
